--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,3 +13,5 @@ log = "0.4"
 pretty_env_logger = "0.4"
 diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
 chrono = "^0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
