--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rust-forms-api"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+cargo-watch = "8.1.2"
 
 [dependencies]
 tokio = {version = "1", features = ["full"] }
@@ -11,7 +12,8 @@ warp = "0.3"
 dotenv = "0.15.0"
 log = "0.4"
 pretty_env_logger = "0.4"
-diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
+diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
 chrono = "^0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+jsonschema = "^0.16"
