--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,3 +17,7 @@ chrono = "^0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 jsonschema = "^0.16"
+rust-argon2 = "1.0"
+jwt = "0.16.0"
+hmac = "0.12.1"
+sha2 = "0.10.6"
