--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,7 +12,7 @@ warp = "0.3"
 dotenv = "0.15.0"
 log = "0.4"
 pretty_env_logger = "0.4"
-diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
+diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2", "serde_json"] }
 chrono = "^0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
